test/test_suite7/errors/switch_default_catch.c3
fn void main()
{
	int! x;
	if (catch err = x)
	{
		default: // #warning: 'if-catch'
			return;
	}
	return;
}